<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="PluralsCandidate">
    <string name="app_name">Earthquakes</string>
    <string name="html_text_with_color" translatable="false">&lt;font color=#%1$s>%2$s&lt;/font></string>
    <string name="yes_text">YES</string>
    <string name="no_text" translatable="false">NO</string>
    <string name="letter_s_lowercase" translatable="false">s</string>
    <string name="ok_text" translatable="false">@android:string/ok</string>
    <string name="cancel_text" translatable="false">@android:string/cancel</string>
    <string name="spanish_only_plural_ending_letter_s" />
    <string name="kilometers_text" translatable="false">km</string>
    <string name="miles_text">mi</string>
    <string name="version_name" translatable="false">1.4</string>
    <string name="google_map_default_icon_content_description">
        Default map icon</string>
    <string name="google_map_satellite_icon_content_description">
        Satellite map icon</string>
    <string name="google_map_terrain_icon_content_description">
        Terrain map icon</string>
    <string name="google_map_layers_icon_content_description">
        Map layers icon</string>
    <string name="app_shared_preferences_name" translatable="false">app_shared_preferences</string>
    <string name="activity_earthquake_details_map_type_shared_preference_key" translatable="false">
        activity_earthquake_details_map_type</string>
    <string name="activity_earthquake_details_google_map_type_shared_preference_key" translatable="false">
        activity_earthquake_details_google_map_type</string>
    <string name="activity_earthquakes_map_google_map_type_shared_preference_key" translatable="false">
        activity_earthquakes_map_google_map_type</string>
    <string name="activity_favorites_sort_by_shared_preference_key" translatable="false">
        activity_favorites_sort_by_shared_preference_key</string>
    <string name="last_known_device_location_latitude_shared_preference_key" translatable="false">
        last_known_device_location_latitude</string>
    <string name="last_known_device_location_longitude_shared_preference_key" translatable="false">
        last_known_device_location_longitude</string>
    <string name="activity_main_label">Earthquakes</string>
    <string name="activity_main_location_text">Location</string>
    <string name="searching_earthquakes_text">Searching for earthquakes</string>
    <string name="no_internet_connection_text">No internet connection</string>
    <string name="search_cancelled_text">Search cancelled</string>
    <string name="no_server_response_text">No response from the USGS server</string>
    <string name="earthquakes_list_updated_text">Earthquakes list updated</string>
    <string name="earthquakes_list_title_for_one_earthquake">%1$s earthquake%2$s found%3$s in %4$s%5$s.</string>
    <string name="earthquakes_list_title_for_multiple_earthquakes">%1$s earthquake%2$s found%3$s in %4$s%5$s. Sorted by %6$s.</string>
    <string name="earthquakes_list_title_max_distance_from_you_section">within %1$s %2$s from you</string>
    <string name="earthquakes_list_title_found_and_sorted_words_suffix" />
    <string name="earthquakes_list_title_us_name">the United States</string>
    <string name="no_earthquakes_found_text">No earthquakes found</string>
    <string name="menu_activity_main_action_refresh_title">Update list</string>
    <string name="menu_activity_main_action_stop_title">Stop update</string>
    <string name="menu_activity_main_action_search_preferences_title">Search preferences</string>
    <string name="menu_activity_main_action_sort_by_distance_title">Re-sort by distance</string>
    <string name="menu_activity_main_action_list_information_title">List information</string>
    <string name="menu_activity_main_action_help_title">Help</string>
    <string name="menu_activity_main_action_about_title">About</string>
    <string name="activity_main_image_view_content_description" translatable="false">
        House damaged by an earthquake</string>
    <string name="activity_main_earthquakes_list_information_dialog_fragment_tag" translatable="false">
        earthquakes_list_information_dialog_fragment
    </string>
    <string name="activity_main_no_earthquake_location_text">No name</string>
    <string name="activity_main_long_search_message">
        See search preferences help for tips to reduce the search time.
    </string>
    <string name="activity_main_distance_from_you_text">%1$s %2$s from you</string>
    <string name="menu_activity_main_bottom_navigation_view_action_list_title">Earthquakes</string>
    <string name="menu_activity_main_bottom_navigation_view_action_map_title">Map</string>
    <string name="menu_activity_main_bottom_navigation_view_action_favorites_title">Favorites</string>
    <string name="activity_main_location_can_not_be_determined_message_title">
        Turn on location
    </string>
    <string name="activity_main_location_can_not_be_determined_message_tag" translatable="false">
        activity_main_location_can_not_be_determined_message_tag
    </string>
    <string name="activity_main_distance_and_filter_not_accurate_message">
        &lt;br/&gt;The &lt;b>maximum distance from you&lt;/b> search preference and the &lt;b>
        distance from you&lt;/b> values may not be accurate because your location can not be determined
        right now and the one used for the calculations is a previous location saved on your device.
        &lt;br/&gt;&lt;br/&gt;&lt;b>Please turn on the location on your device settings&lt;/b>.&lt;br/&gt;&lt;br/&gt;Once you turn
        it on, it can take some time for your device to detect your location.
    </string>
    <string name="activity_main_distance_and_filter_not_shown_message">
        &lt;br/&gt;The &lt;b>maximum distance from you&lt;/b> search preference will no be
        applied and the &lt;b>distance from you&lt;/b> will not be shown because your location can not be
        determined right now and there is not a location saved on your device to be used for the
        calculations.&lt;br/&gt;&lt;br/&gt;&lt;b>Please turn on the location on your device settings&lt;/b>.&lt;br/&gt;&lt;br/&gt;
        Once you turn it on, it can take some time for your device to detect your location.
    </string>
    <string name="activity_main_distance_not_accurate_message">
        &lt;br/&gt;The &lt;b>distance from you&lt;/b> values may not be accurate because
        your location can not be determined right now and the one used for the calculations
        is a previous location saved on your device.&lt;br/&gt;&lt;br/&gt;&lt;b>Please turn on the location on
        your device settings&lt;/b>.&lt;br/&gt;&lt;br/&gt;Once you turn it on, it can take some time for your device
        to detect your location.
    </string>
    <string name="activity_main_distance_not_shown_message">
        &lt;br/&gt;The &lt;b>distance from you&lt;/b> will not be shown because your
        location can not be determined right now and there is not a location saved on your device to
        be used for the calculations.&lt;br/&gt;&lt;br/&gt;&lt;b>Please turn on the location on your device settings
        &lt;/b>.&lt;br/&gt;&lt;br/&gt;Once you turn it on, it can take some time for your device to detect your location.
    </string>
    <string name="activity_main_filter_not_accurate_message">
        &lt;br/&gt;The &lt;b>maximum distance from you&lt;/b> search preference may not be
        accurate because your location can not be determined right now and the one used for the
        calculations is a previous location saved on your device.&lt;br/&gt;&lt;br/&gt;&lt;b>Please turn on the
        location on your device settings&lt;/b>.&lt;br/&gt;&lt;br/&gt;Once you turn it on, it can take some time
        for your device to detect your location.
    </string>
    <string name="activity_main_filter_not_shown_message">
        &lt;br/&gt;The &lt;b>maximum distance from you&lt;/b> search preference will no be
        applied because your location can not be determined right now and there is not a location
        saved on your device to be used for the calculations.&lt;br/&gt;&lt;br/&gt;&lt;b>Please turn on the location
        on your device settings&lt;/b>.&lt;br/&gt;&lt;br/&gt;Once you turn it on, it can take some time for your
        device to detect your location.</string>
    <string name="activity_main_sort_by_distance_dialog_fragment_tag" translatable="false">
        activity_main_sort_by_distance_dialog_fragment_tag
    </string>
    <string name="activity_main_sorted_by_distance_snack_text">Earthquakes re-sorted by %1$s</string>
    <string name="activity_main_list_title_sorted_by_distance_text">Then re-sorted by %1$s</string>
    <string name="search_preference_sort_by_date_text">Date</string>
    <string name="search_preference_sort_by_magnitude_text">Magnitude</string>
    <string name="search_preference_sort_by_ascending_text">Ascending</string>
    <string name="search_preference_sort_by_descending_text">Descending</string>
    <string name="activity_earthquake_details_google_map_default_type_text">Default</string>
    <string name="activity_earthquake_details_google_map_satellite_type_text">Satellite</string>
    <string name="activity_earthquake_details_google_map_terrain_type_text">Terrain</string>
    <string name="activity_earthquake_details_intensity_text">Intensity</string>
    <string name="activity_earthquake_details_estimated_text">Estimated</string>
    <string name="activity_earthquake_details_reported_text">Reported</string>
    <string name="activity_earthquake_details_alert_text">Alert</string>
    <string name="activity_earthquake_details_tsunami_text">Possible tsunami</string>
    <string name="activity_earthquake_details_felt_reports_text">Felt reports</string>
    <string name="activity_earthquake_details_report_text">Report</string>
    <string name="activity_earthquake_details_epicenter_text">Epicenter</string>
    <string name="menu_activity_earthquake_details_action_add_to_favorites_title">Add to favorites</string>
    <string name="menu_activity_earthquake_details_action_information_title">Help</string>
    <string name="menu_activity_earthquake_details_action_glossary_title">Glossary</string>
    <string name="menu_activity_earthquake_details_action_web_page_title">
        @string/activity_earthquake_web_page_label</string>
    <string name="menu_activity_favorites_action_sort_title">Sort favorites</string>
    <string name="menu_activity_favorites_action_delete_title">Delete all favorites</string>
</resources>