<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.weebly.hectorjorozco.earthquakes.ui.MainActivity">

    <item
        android:id="@+id/menu_activity_main_action_refresh"
        android:icon="@drawable/ic_stop_white_24dp"
        android:orderInCategory="1"
        android:title="@string/menu_activity_main_action_stop_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_activity_main_action_search_preferences"
        android:icon="@drawable/ic_settings_white_24dp"
        android:orderInCategory="2"
        android:title="@string/menu_activity_main_action_search_preferences_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_activity_main_action_list_information"
        android:orderInCategory="3"
        android:title="@string/menu_activity_main_action_list_information_title"
        app:showAsAction="never" />


</menu>
