<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.weebly.hectorjorozco.earthquakes.ui.MainActivity">

    <item
        android:id="@+id/menu_activity_main_bottom_navigation_view_action_list"
        android:icon="@drawable/ic_list_white_24dp"
        android:title="@string/menu_activity_main_bottom_navigation_view_action_list_title"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_activity_main_bottom_navigation_view_action_map"
        android:icon="@drawable/ic_map_white_24dp"
        android:title="@string/menu_activity_main_bottom_navigation_view_action_map_title"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_activity_main_bottom_navigation_view_action_favorites"
        android:icon="@drawable/ic_star_white_24dp"
        android:title="@string/menu_activity_main_bottom_navigation_view_action_favorites_title"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_activity_main_bottom_navigation_view_action_news"
        android:icon="@drawable/ic_news_white_24dp"
        android:title="@string/menu_activity_main_bottom_navigation_view_action_news_title"
        app:showAsAction="ifRoom"/>

</menu>